--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,19 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+
+import { db, Message } from 'astro:db'
+
+if (Astro.request.method === "POST") {
+	const formData = await Astro.request.formData()
+	const message = formData.get("message")
+	const author = "dev"
+	if (typeof message == "string" && typeof author == "string") {
+		await db.insert(Message).values({ author, message })
+	}
+}
+
+const messages = await db.select().from(Message).all()
 ---
 
 <Layout title="Welcome to Astro.">
@@ -34,11 +47,17 @@ import Card from '../components/Card.astro';
 			</defs>
 		</svg>
 		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
+		<p class="instructions">Heya! Got something to show here</p>
+		<ul>
+			{messages.map(m=>
+				<li>{m.message} <span class="author">{m.author}</span></li>
+			)}
+		</ul>
+		<form method="POST" style="display: grid">
+			<input name="message" id="message" placeholder="New message">
+			<input type="submit">Submit</input>
+		</form>
+		<!-- <ul role="list" class="link-card-grid">
 			<Card
 				href="https://docs.astro.build/"
 				title="Documentation"
@@ -59,7 +78,7 @@ import Card from '../components/Card.astro';
 				title="Community"
 				body="Come say hi to our amazing Discord community. ❤️"
 			/>
-		</ul>
+		</ul> -->
 	</main>
 </Layout>
 
@@ -119,5 +138,10 @@ import Card from '../components/Card.astro';
 		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
 		gap: 2rem;
 		padding: 0;
+	}
+	.author {
+		color: rgba(var(--accent-light), 0.6);
+		font-size: 0.8em;
+		font-style: italic;
 	}
 </style>
