--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,6 +25,8 @@ const { title } = Astro.props;
 		--accent: 136, 58, 234;
 		--accent-light: 224, 204, 250;
 		--accent-dark: 49, 10, 101;
+		--danger-light: 255, 204, 204;
+		--danger-dark: 153, 0, 0;
 		--accent-gradient: linear-gradient(
 			45deg,
 			rgb(var(--accent)),
