--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,9 +35,9 @@ import PopTools from '../components/PopTools.vue';
 		</svg>
 		<h1>Welcome to <span class="text-gradient">a Page</span></h1>
 		<!-- <p class="instructions">Heya! Got something to show here</p> -->
-		<h2>Pages</h2>
-		<ul>
-			<li><a href="/page/example">Example</a></li>
+		<h2>Content Pages</h2>
+		<ul style="color: gold;">
+			<li><a style="color: inherit;" href="/page/example">Example</a></li>
 		</ul>
 		<PopTools client:load />
 		<div style="height: 33svh;"></div>
